[tool.poetry]
name = "endtoend"
version = "0.1.0"
description = ""
authors = ["Shimpo Yusuke <ritchie.deep.purple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pymongo = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
